events: implement latest, from timepoint and from/to
